# rgb-node

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-nodejs  LICENSE  LICENSE.md  README.md  _typos.toml  build.rs  codecov.yml  config_spec.toml  draft.rs  license_header  p
.github/: FUNDING.yml
.github/workflows/: build.yml  docker-image.yml  rust.yml
cli/: Cargo.toml  build.rs
cli/src/: command.rs  main.rs  opts.rs
client/: Cargo.toml  build.rs
client/src/: args.rs  client.rs  command.rs  lib.rs  main.rs
db/cache/: diesel.toml
db/cache/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
db/cache/migrations/2020-03-21-151310_base/: down.sql  (+1 more)
doc/demo-0.1/: Dockerfile  README.md  docker-compose.yml
doc/demo-0.4/: Dockerfile  README.md  demo.sh  docker-compose.yml
drafts/: prototyping.md
examples/: main.rs
ffi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  main.cpp
ffi/android/DemoApp/: .gitignore  settings.gradle
ffi/android/DemoApp/app/: build.gradle
ffi/android/DemoApp/app/src/main/: AndroidManifest.xml
ffi/android/DemoApp/app/src/main/java/org/lnpbp/demoapp/: DemoApp.java  MainActivity.java
ffi/android/DemoApp/app/src/main/res/layout/: activity_main.xml
ffi/android/DemoApp/app/src/main/res/menu/: menu_main.xml
ffi/android/DemoApp/app/src/main/res/navigation/: nav_graph.xml
ffi/android/DemoApp/app/src/main/res/values/: strings.xml
ffi/android/DemoApp/gradle/wrapper/: gradle-wrapper.properties
ffi/ios/: README.md
ffi/ios/DemoApp/RGB Demo App/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
ffi/ios/DemoApp/RGB Demo App.xcodeproj/: project.pbxproj
ffi/ios/DemoApp/RGB Demo App.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ffi/ios/DemoApp/RGB Demo App/Base.lproj/: Main.storyboard
ffi/ios/DemoApp/RGB Demo App/RGBLib/: Runtime.swift
ffi/ios/DemoApp/RGB Demo App/RGBLib/Model/: Arguments.swift  IssueArgs.swift  StartRgbArgs.swift  TransferArgs.swift
ffi/ios/DemoApp/RGB Demo App/RGB_Demo_App.xcdatamodeld/: .xccurrentversion
ffi/nodejs/: .gitignore  BUILD.md  Dockerfile  README.md  binding.gyp  example.js  package.json  swig.i
ffi/src/: lib.rs
kaleidoscope/: Cargo.toml  LICENSE
kaleidoscope/src/: accounts.rs  config.rs  data.rs  runtime.rs
kaleidoscope/src/commands/: account.rs  bitcoin.rs  fungible.rs  keyring.rs  lightning.rs  mod.rs
kaleidoscope/src/rgbkit/: magic_numbers.rs  mod.rs  seal_spec.rs
rpc/: Cargo.toml
rpc/src/: client.rs  data.rs  error.rs  frame.rs  lib.rs  messages.rs  request.rs  response.rs  reveal.rs  service_id.rs  structs.rs
sample/: consignment-2.rgb  consignment.rgb  dest_tx.psbt  disclosure.rgb  witness.psbt
shell/: _bp-cli  _bp-cli.ps1  _bucketd  _bucketd.ps1  _containerd  _containerd.ps1  _rgb-cli  _rgb-cli.ps1  _rgb-node  _rgb-node.ps1  _rgbd  _rgbd.ps1  bp-cli.bash  bucketd.bash  containerd.bash  rgb-cli.bash  rgb-node.bash  rgbd.bash
src/: accounts.rs  asset.rs  bifrost.rs  broker.rs  bus.rs  config.rs  constants.rs  contract.rs  contract_body.rs  contract_header.rs  coordination.rs  daemons.rs  data.rs  database.rs  db.rs  dispatcher.rs  error.rs  lib.rs  main.rs  marker.rs  onchain.rs  opts.rs  outentry.rs  outpoint.rs  output_entry.rs  outputs.rs  pay_to_contract.rs  proof.rs  rpc.rs  runtime.rs  service.rs  traits.rs  util.rs  utils.rs
src/accounts/: mod.rs
src/api/: fungible.rs  mod.rs  reply.rs  stash.rs
src/bitcoin/: helpers.rs
src/blueprints/: crowdsale.rs  issue.rs  mod.rs  reissue.rs
src/bucketd/: mod.rs  opts.rs  processor.rs  service.rs
src/bus/: ctl.rs  mod.rs  services.rs
src/chain/: indexer.rs  mod.rs  tx_builder.rs  wallet.rs
src/cli/: config.rs  error.rs  fungible.rs  mod.rs  runtime.rs  stash.rs
src/commands/: account.rs  bitcoin.rs  fungible.rs  mod.rs
src/containerd/: mod.rs  opts.rs  processor.rs  service.rs
src/contracts/: mod.rs
src/contracts/fungible/: api.rs  asset.rs  config.rs  error.rs  mod.rs  outcoins.rs  processor.rs  request.rs  rpc.rs  runtime.rs  schema.rs  storage.rs
src/entities/: mod.rs  rgb_output.rs  traits.rs
src/entities/contracts/: crowdsale_contract.rs  data.rs  emission_contract.rs  header.rs  mod.rs
src/entities/proofs/: data.rs  dummy_proof.rs  emission_contract_proof.rs  header.rs  mod.rs  transfer_proof.rs
src/fungible/: accountant.rs  data.rs  error.rs  invoice.rs  mod.rs  selection.rs  stock.rs  transfer.rs
src/fungibled/: config.rs  mod.rs  runtime.rs
src/fungibled/cache/: cache.rs  file.rs  mod.rs  sql.rs
src/fungibled/sql/: mod.rs  models.rs  schema.rs
src/i9n/: config.rs  error.rs  fungible.rs  mod.rs  runtime.rs
src/kaleidoscope/: burn.rs  deserialize.rs  getnewaddress.rs  issueasset.rs  listunspent.rs  mod.rs  sendtoaddress.rs  sync.rs
src/lib/: mod.rs  tx_builder.rs
src/model/: db.rs  descr.rs  mod.rs  utxo.rs  wallet.rs
src/reactors/: dispatcher.rs  mod.rs  watcher.rs
src/rgbd/: config.rs  daemons.rs  mod.rs  opts.rs  runtime.rs  service.rs
src/rgbkit/: error.rs  file.rs  macros.rs  mod.rs  storage.rs
src/rgbkit/fungible/: asset.rs  manager.rs  mod.rs  outcoins.rs  schema.rs  storage.rs
src/rpc/: fungible.rs  mod.rs  reply.rs  stash.rs
src/services/: async_client.rs  contracts_reader.rs  contracts_writer.rs  mod.rs  reader.rs  writer.rs
src/stash/: config.rs  electrum.rs  mod.rs  rpc.rs  runtime.rs  stash.rs
src/stash/index/: btree.rs  index.rs  mod.rs
src/stash/storage/: disk.rs  hammersbald.rs  mod.rs  store.rs
src/stashd/: config.rs  electrum.rs  mod.rs  request.rs  runtime.rs  stash.rs
src/stashd/index/: btree.rs  index.rs  mod.rs
src/stashd/storage/: disk.rs  hammersbald.rs  mod.rs  store.rs
src/tests/: contract.rs  mod.rs  proof.rs
src/util/: bech32data.rs  error.rs  file.rs  macros.rs  magic_numbers.rs  mod.rs  seal_spec.rs  txs.rs
src/workers/: broker.rs  mod.rs  validator.rs
test/: consignment-usdt.rgb  consignment.rgb  dest_tx-2.psbt  dest_tx.psbt  info.md  invoice.txt  rgb20.yml  source_tx.psbt  test_db.sh  witness.psbt
(+19 files in other folders)
