[workspace]
default-members = [".", "rpc", "client"]
members = [".", "rpc", "client"]
exclude = []

[workspace.package]
version = "0.12.0-alpha.1"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
keywords = ["bitcoin", "lightning-network", "lnp-bp", "smart-contracts", "rgb"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
edition = "2024"
rust-version = "1.85.0"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.8.0"
strict_encoding = "2.8.1"
ultrasonic = "0.12.0-beta.5"
bp-std = "0.12.0-beta.5"
bp-wallet = { version = "0.12.0-beta.5", default-features = false }
bp-rpc = "0.12.0-alpha.1"
bp-client = "0.12.0-alpha.1"
rgb-std = "0.12.0-beta.5"

io-reactor = "0.6.0"
cyphernet = { version = "0.5.2", features = ["tor", "dns", "ed25519", "p2p-ed25519"] }
microservices = { version = "0.12.0" }
netservices = { version = "0.12.0-beta.1", features = ["eidolon", "reactor"] }
crossbeam-channel = "0.5.15"

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"

clap = { version = "4.4.8", features = ["derive", "env"] }
clap_complete = "4.5.7"
log = { version = "0.4" }
loglevel = { version = "0.2.0" }
shellexpand = { version = "3.1.0" }
dotenv = { version = "0.15" }
settings = { version = "0.14", package = "config" }
configure_me = { version = "0.4" }
configure_me_codegen = "0.4.4"

[package]
name = "rgb-node"
description = "RGB Node: sovereign smart contracts backend"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
build = "build.rs"
exclude = [".github", "Dockerfile", ".dockerignore", "contrib", "shell"]

[lib]
name = "rgbnode"

[[bin]]
name = "rgbd"
required-features = ["server"]

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
bp-wallet = { workspace = true, features = ["cli"] }
rgb-std = { workspace = true, features = ["fs"] }
rgb-rpc = { version = "0.12.0-alpha.1", path = "rpc" }
io-reactor.workspace = true
microservices = { workspace = true, features = ["log"] }
netservices = { workspace = true, features = ["log"] }
crossbeam-channel.workspace = true
log.workspace = true
loglevel.workspace = true
clap = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
settings = { workspace = true, optional = true }
configure_me = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }

[build-dependencies]
amplify.workspace = true
bp-wallet = { workspace = true, features = ["cli"] }
rgb-rpc = { version = "0.12.0-alpha.1", path = "rpc" }
clap.workspace = true
clap_complete.workspace = true
log.workspace = true
shellexpand.workspace = true
configure_me_codegen.workspace = true

[features]
default = ["server"]

# Server is a standalone application that runs daemons.
# Required for all apps that can be launched from a command-line shell as binaries
# (i.e., both servers and cli)
server = ["dep:dotenv", "dep:clap", "dep:settings", "dep:configure_me", "dep:shellexpand"]

[package.metadata.configure_me]
spec = "config_spec.toml"

[patch.crates-io]
aluvm = { git = "https://github.com/AluVM/aluvm", branch = "master" }
zk-aluvm = { git = "https://github.com/AluVM/zk-aluvm", branch = "master" }
ultrasonic = { git = "https://github.com/AluVM/ultrasonic", branch = "master" }
hypersonic = { git = "https://github.com/AluVM/sonic", branch = "master" }
sonic-api = { git = "https://github.com/AluVM/sonic", branch = "master" }
sonic-callreq = { git = "https://github.com/AluVM/sonic", branch = "master" }
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "v0.12" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
bp-derive = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
descriptors = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
psbt = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
bp-std = { git = "https://github.com/BP-WG/bp-std", branch = "v0.12" }
bp-wallet = { git = "https://github.com/BP-WG/bp-wallet", branch = "v0.12" }
bp-electrum = { git = "https://github.com/BP-WG/bp-electrum-client", branch = "v0.12" }
bp-esplora = { git = "https://github.com/BP-WG/bp-esplora-client", branch = "v0.12" }
bp-rpc = { git = "https://github.com/BP-WG/bp-node", branch = "master" }
bp-client = { git = "https://github.com/BP-WG/bp-node", branch = "master" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "v0.12" }
rgb-std = { git = "https://github.com/RGB-WG/rgb-std", branch = "v0.12" }
rgb-invoice = { git = "https://github.com/RGB-WG/rgb-std", branch = "v0.12" }

io-reactor = { git = "https://github.com/rust-amplify/io-reactor", branch = "v0.6" }
cyphergraphy = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
cypheraddr = { git = "https://github.com/cyphernet-labs/cyphernet.rs", branch = "master" }
microservices = { git = "https://github.com/cyphernet-labs/microservices.rs", branch = "master" }
netservices = { git = "https://github.com/cyphernet-labs/netservices.rs", branch = "develop" }
