[package]
name = "rgb-cli"
description = "RGB node command-line interface"
version = "0.8.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "node", "layer-2", "smart-contracts", "rgb"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "rgb-cli"

[dependencies]
amplify = "3.13.0"
strict_encoding = "~0.8.0"
internet2 = "0.8.3"
microservices = { version = "0.8.10", default-features = false, features = ["cli"] }
bitcoin = "0.28.1"
psbt = "0.8.0"
lnpbp = "0.8.0"
rgb-std = { version = "0.8.0", features = ["serde"] }
rgb_rpc = { version = "0.8.0", path = "../rpc" }
clap = { version = "~3.1.18", features = ["derive", "env"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
log = "0.4.14"
shellexpand = "2.1"
colored = "2"

[build-dependencies]
amplify = "3.12.1"
strict_encoding = "~0.8.0"
bitcoin = "0.28.1"
lnpbp = "0.8.0"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
internet2 = "0.8.0"
rgb-std = "0.8.0"
rgb_rpc = { version = "0.8.0", path = "../rpc" }
configure_me_codegen = "0.4"
