[package]
name = "rgb-cli"
description = "RGB node command-line interface"
version = "0.9.0-rc.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["bitcoin", "node", "layer-2", "smart-contracts", "rgb"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "rgb-cli"

[dependencies]
amplify = "3.13.0"
strict_encoding = "~0.9.0-rc.2"
internet2 = "0.9.0-rc.1"
microservices = { version = "0.9.0-rc.1", default-features = false, features = ["cli"] }
bitcoin = "0.29.2"
psbt = "0.9.0-rc.1"
lnpbp = "0.9.0-rc.1"
rgb-std = { version = "0.9.0-rc.1", features = ["serde"] }
rgb_rpc = { version = "0.9.0-rc.1", path = "../rpc" }
clap = { version = "~3.2.23", features = ["derive", "env"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
log = "0.4.14"
shellexpand = "2.1"
colored = "2"

[build-dependencies]
amplify = "3.13.0"
strict_encoding = "~0.9.0-rc.2"
bitcoin = "0.29.2"
lnpbp = "0.9.0-rc.1"
clap = { version = "~3.2.23", features = ["derive", "env"] }
clap_complete = "~3.2.5"
internet2 = "0.9.0-rc.1"
rgb-std = "0.9.0-rc.1"
rgb_rpc = { version = "0.9.0-rc.1", path = "../rpc" }
configure_me_codegen = "0.4"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
