[package]
name = "rgb-client"
description = "RGB node command-line interface"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["cryptography::cryptocurrencies", "network-programming", "command-line-utilities"]
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "rgb-cli"
required-features = ["cli"]

[lib]
name = "rgbclient"

[dependencies]
amplify.workspace = true
bp-std = { workspace = true, optional = true }
rgb-rpc = { version = "0.12.0-alpha.1", path = "../rpc" }
io-reactor.workspace = true
netservices.workspace = true
clap = { workspace = true, optional = true }
log = { workspace = true, optional = true }
loglevel = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[build-dependencies]
amplify.workspace = true
clap.workspace = true
clap_complete.workspace = true
rgb-rpc = { version = "0.12.0-alpha.1", path = "../rpc" }

[features]
default = ["cli"]
all = ["log", "cli"]
cli = ["dep:bp-std", "log", "dep:clap", "dep:shellexpand", "dep:serde_yaml"]
log = ["dep:log", "dep:loglevel", "io-reactor/log", "netservices/log"]
