[package]
name = "rgb"
version = "0.1.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>",
           "Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgb"

[build-dependencies]
cbindgen = "^0.14"
openssl = { version = "^0.10", features = ["vendored"] }

[dependencies]
log = "0.4"
rgb_node = { path = "../" }
serde = { version = "~1.0", features = ["derive"] }
serde_with = "1.4"
serde_json = "~1.0"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "~0.8.6"

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "~0.7.1"
