[package]
name = "rgb-rpc"
description = "RGB Node RPC API"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lib]
name = "rgbrpc"

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
strict_types.workspace = true
sonic-api.workspace = true
bp-std.workspace = true
bp-rpc = { workspace = true, optional = true }
rgb-std.workspace = true
netservices.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "dep:serde", "amplify/serde",
    "strict_encoding/serde", "strict_types/serde",
    "sonic-api/serde", "bp-std/serde", "bp-rpc/serde", "rgb-std/serde"
]
