[package]
name = "rgb-rpc"
description = "RGB Node RPC API"
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lib]
name = "rgbrpc"

[dependencies]
amplify = { workspace = true, features = ["serde"] }
strict_types = { workspace = true, features = ["serde"] }
sonic-api = { workspace = true, features = ["serde"] }
bp-std = { workspace = true, features = ["serde", "client-side-validation"] }
bp-rpc = { workspace = true, features = ["serde"] }
rgb-std = { workspace = true, features = ["serde"] }
netservices.workspace = true
serde.workspace = true
ciborium.workspace = true

[features]
default = []
all = []
serde = []
